src/components/MainNav/MainNav.css
/* GENERAL STYLES */
.mainnav {
  background-color: var(--theme-primary-color);
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  position: fixed;
  height: var(--main-nav-height);
  width: 100%;
  /* Render above checkboxes */
  z-index: 1;
}

.mainnav__button {
  color: white;

  background-color: transparent;
  border: none;
  padding: 10px 20px;
  outline: none;
  height: 100%;
}
.mainnav__button:active,
.mainnav__button:hover, {
  background-color: transparent;
  border: none;
}
@media screen and (min-width: 600px) {
  .mainnav__button {
    display: none;
  }
}

.mainnav__list {
  background-color: var(--theme-primary-color);
  border-top: 1px solid rgba(255,255,255,0.8);
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
  height: 100vh;
  
  transform: translateX(-100%);
  transition: transform ease-in-out 0.125s;
}
@media screen and (min-width: 600px) {
  .mainnav__list {
    background-color: transparent;
    border-bottom: none;
    flex-direction: row;
    height: auto;

    transform: translateX(0);
  }
}

.mainnav__list--open {
  transform: translateX(0);
}

.mainnav__list__element {
  border-bottom: 1px solid rgba(255,255,255,0.3);
}
@media screen and (min-width: 600px) {
  .mainnav__list__element {
    background-color: transparent;
    border-bottom: none;
    flex-direction: row;
    height: auto;

    transform: translateX(0);
  }
}

/* .mainnav__list__element--right {} */
@media screen and (min-width: 600px) {
  .mainnav__list__element--right {
    margin-left: auto;
  }
}

@media screen and (min-width: 600px) {
  .mainnav__list__element--rightest {
    margin-left: 0;
  }
}

.mainnav__list__element__link {
  color: #FFFFFF;
  text-decoration: none;
  
  display: inline-block;
  padding: 20px;
}

.mainnav__list__element__link--active,
.mainnav__list__element__link:hover {
  color: var(--theme-primary-color-dark);
  text-decoration: none;
}

